update UI for user testing

--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
+		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		<script src="scripts/jquery.min.js"></script>
 		<script src="scripts/app.js"></script>
 	</head>
 	<body>
 		<h1>Job Queue</h1>
-		<section>
-			<label for="url">URL:</label>
-			<input class="url" name="url" type="text"/>
-			<button class="add">ADD</button>
-			<button class="delete-all">DELETE ALL</button>
-		</section>
+		<div>
+			<form id="add-form">
+				<label for="url">URL:</label>
+				<input type="text" class="url" name="url"/>
+				<input type="submit" class="add" value="Add"/>
+			</form>
+		</div>
 		<section>
 			<ul class="job-list"></ul>
+			<button class="delete-all">DELETE ALL</button>
 		</section>
 	</body>
 </html>
