--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,6 +77,7 @@ a:hover {
   -moz-animation: updating_blink 2s linear;
   animation: updating_blink 2s linear;
 }
+.job-list.pending .update,
 .job-list.updating .update {
   display: none;
 }
